@@ -252,7 +252,7 @@
      *
      * @param String $format_view The format (see format for date() function)
      */
-    function setFormatView()
+    function setFormatView($format_view)
     {
       $txt_date_format_view = atktext("date_format_view","atk","","","",true);
 
